añado ejercicio 1 tema 9 servidor

--- a/CLIENTE/2 EVAL/tema7/ejercicio7.2/ejercicio4.html
+++ b/CLIENTE/2 EVAL/tema7/ejercicio7.2/ejercicio4.html
@@ -5,6 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <script src="ejercicio4.js" type="module" defer></script>
+    <style>
+      tr, td{
+        border: solid 2px;
+      }
+    </style>
   </head>
   <body>
     <tr>
@@ -16,11 +21,10 @@
       <td>Caratula</td>
       <td>Prestado</td>
   </tr>
-    <table id="tabla">
+    <table id="tabla"><br>
        
-        <span id="espacioTabla"></span>
+        <table id="espacioTabla"></table>
     </table>
-    <button id="xml">Orden Normal con xml</button>
 
     <button id="ordenNormal">Orden Normal</button>
     <button id="ordenInverso">Orden Inverso</button>
@@ -29,6 +33,8 @@
     <button id="borrarDisco">Borrar Disco</button>
     <button id="consultarDisco">Consultar Disco</button>
     <p id="numeroDiscos"></p>
+    <table>
+  </table>
   </body>
  
 </html>
