--- a/CLIENTE/2 EVAL/tema7/ejercicio7.2/ejercicio4.html
+++ b/CLIENTE/2 EVAL/tema7/ejercicio7.2/ejercicio4.html
@@ -4,12 +4,6 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <script src="ejercicio4.js" type="module" defer></script>
-    <style>
-      tr, td{
-        border: solid 2px;
-      }
-    </style>
   </head>
   <body>
     <tr>
@@ -21,11 +15,10 @@
       <td>Caratula</td>
       <td>Prestado</td>
   </tr>
-    <table id="tabla"><br>
+    <table id="tabla">
        
-        <table id="espacioTabla"></table>
+        <span id="espacioTabla"></span>
     </table>
-
     <button id="ordenNormal">Orden Normal</button>
     <button id="ordenInverso">Orden Inverso</button>
     <button id="ordenAlfabetico">Orden Alfabetico</button>
@@ -33,8 +26,6 @@
     <button id="borrarDisco">Borrar Disco</button>
     <button id="consultarDisco">Consultar Disco</button>
     <p id="numeroDiscos"></p>
-    <table>
-  </table>
   </body>
- 
+  <script src="ejercicio4.js" type="module"></script>
 </html>
