--- a/CLIENTE/2 EVAL/tema7/ejercicio7.1/ejercicio3.html
+++ b/CLIENTE/2 EVAL/tema7/ejercicio7.1/ejercicio3.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <script src="ejercicio3.js" type="module" defer></script>
 </head>
 <body>
     <table id="tabla" style="border: 1px; border: solid;">
@@ -16,8 +17,6 @@
     <input type="number" name="cuota" id="inputCuota">
     <button id="comprobarLocalidadButton">Comprobar</button>
     <p id="respuesta"></p>
-    <p id="texto"></p>
-    <button id="cambiaContenido">crear Tabla</button>
 </body>
-<script src="ejercicio3.js" type="module"></script>
+
 </html>
